--- a/kube-dependencies.yml
+++ b/kube-dependencies.yml
@@ -1,6 +1,9 @@
 - hosts: all
   become: yes
   tasks:
+   - name: disable swap
+     command: swapoff -a
+
    - name: install Docker
      apt:
        name: docker.io
