--- a/kube-dependencies.yml
+++ b/kube-dependencies.yml
@@ -1,4 +1,5 @@
 - hosts: all
+  remote_user: ubuntu
   become: yes
   tasks:
    - name: disable swap
@@ -38,6 +39,7 @@
        state: present
 
 - hosts: master
+  remote_user: ubuntu
   become: yes
   tasks:
    - name: install kubectl
