--- a/argo.yml
+++ b/argo.yml
@@ -1,22 +1,31 @@
-# NOTE: Does not work - need to test and fix
 - hosts: master
   become: yes
   gather_facts: false
   tasks:
-    - name: get join command
+    - name: install Argo CD
       shell: |
-        # 1. Install Argo CD
+        echo Apply Argo CD
         kubectl create namespace argocd
         kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
-        # 2. Download Argo CD CLI
+        
+        echo Download Argo CD CLI
         sudo curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
         sudo chmod +x /usr/local/bin/argocd
-        # 3. Access The Argo CD API Server
+        
+        echo Access The Argo CD API Server
         kubectl patch svc argocd-server -n argocd -p '{"spec": {"type": "LoadBalancer"}}'
-        kubectl port-forward svc/argocd-server -n argocd 8080:443
-        # 4. Login Using The CLI
+        
+        echo Login Using The CLI
         kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d; echo
         argocd login localhost:8080
+       
+        cat << EOF
+        # change password
         argocd account update-password
-        # 5. Register A Cluster To Deploy Apps To (Optional)
-        # kubectl config get-contexts -o name | argocd cluster add
+        
+        # Register A Cluster To Deploy Apps To (Optional)
+        kubectl config get-contexts -o name | argocd cluster add
+        EOF
+        
+        echo port forward
+        kubectl port-forward svc/argocd-server -n argocd 8080:443
