--- a/argo.yml
+++ b/argo.yml
@@ -16,19 +16,19 @@
         echo Access The Argo CD API Server
         kubectl patch svc argocd-server -n argocd -p '{"spec": {"type": "LoadBalancer"}}'
         
-        echo Login Using The CLI
+        echo port forward
+        echo kubectl port-forward svc/argocd-server -n argocd 8080:443
+
+        cat << EOF
+        # Login Using The CLI
         kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d; echo
         argocd login localhost:8080
-       
-        cat << EOF
+        
         # change password
         argocd account update-password
         
         # Register A Cluster To Deploy Apps To (Optional)
         kubectl config get-contexts -o name | argocd cluster add
         EOF
-        
-        echo port forward
-        kubectl port-forward svc/argocd-server -n argocd 8080:443
     - debug:
         var: shell_result.stdout_lines
