move script to external file

--- a/argo.yml
+++ b/argo.yml
@@ -2,33 +2,5 @@
   become: yes
   gather_facts: false
   tasks:
-    - name: Apply Argo CD
-      shell: |
-        echo Apply Argo CD
-        kubectl create namespace argocd &&
-        kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
-    - name: Download Argo CD CLI
-      shell: |    
-        echo Download Argo CD CLI
-        sudo curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64 &&
-        sudo chmod +x /usr/local/bin/argocd
-    - name: Access The Argo CD API Server
-      shell: |    
-        echo Access The Argo CD API Server
-        kubectl patch svc argocd-server -n argocd -p '{"spec": {"type": "LoadBalancer"}}'        
-    - name: print manual steps
-      register: shell_result
-      shell: |
-        cat << EOF
-        # port forward
-        echo kubectl port-forward svc/argocd-server -n argocd 8080:443
-        # Login Using The CLI
-        kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d; echo
-        argocd login localhost:8080  
-        # change password
-        argocd account update-password 
-        # Register A Cluster To Deploy Apps To (Optional)
-        kubectl config get-contexts -o name | argocd cluster add
-        EOF
-    - debug:
-        var: shell_result.stdout_lines
+    - name: run Argo CD script
+      ansible.builtin.script: argo.sh
