--- a/roles/common/tasks/workers.yml
+++ b/roles/common/tasks/workers.yml
@@ -1,4 +1,4 @@
-- hosts: master
+- hosts: controller
   become: yes
   gather_facts: false
   tasks:
@@ -15,7 +15,7 @@
   become: yes
   tasks:
     - name: join cluster
-      shell: "{{ hostvars[groups['master'][0]].join_command }} >> node_joined.txt"
+      shell: "{{ hostvars[groups['controller'][0]].join_command }} >> node_joined.txt"
       args:
         chdir: $HOME
         creates: node_joined.txt
