--- a/roles/common/tasks/argo.yml
+++ b/roles/common/tasks/argo.yml
@@ -3,6 +3,7 @@
   gather_facts: false
   tasks:
     - name: Copy file with owner and permissions
+      when: install_argo == 'true'
       ansible.builtin.copy:
         src: ../files/argo.sh
         dest: argo.sh
